--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Landing page</title>
+        <title>Landing page 2</title>
         <link rel="stylesheet" href="styles2.css">
     </head>
     <body>
@@ -48,6 +48,12 @@
                     </div>
                 </div>
             </div>
+            <div class="thor-block">
+                <div class="thor-text">
+                    <div class="thor-text-item">Ths is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people wiil actually read it. Who knows? All I know is that it looks nice.</div>
+                    <p style="text-align: right;font-size: 18px; font-weight: bold;">- Thor, God of Thunder </p>
+                </div>
+            </div>    
         </div>
         <div class="footer"></div>
     </body> 
