Add blue-block, continue

--- a/index2.html
+++ b/index2.html
@@ -53,6 +53,13 @@
                     <div class="thor-text-item">Ths is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people wiil actually read it. Who knows? All I know is that it looks nice.</div>
                     <p style="text-align: right;font-size: 18px; font-weight: bold;">- Thor, God of Thunder </p>
                 </div>
+            </div>
+            <div class="blue-block">
+                <div class="call">
+                    <div class="title-action">Call to action! It's time!</div>
+                    <div class="text-action"></div>
+                </div>
+                <button class="sign-2">Sign up</button>    
             </div>    
         </div>
         <div class="footer"></div>
