Done blue-block

--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
             <div class="blue-block">
                 <div class="call">
                     <div class="title-action">Call to action! It's time!</div>
-                    <div class="text-action"></div>
+                    <div class="text-action">Sign up for our product by clicking the button right over there!</div>
                 </div>
                 <button class="sign-2">Sign up</button>    
             </div>    
