--- a/index2.html
+++ b/index2.html
@@ -62,6 +62,10 @@
                 <button class="sign-2">Sign up</button>    
             </div>    
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <div class="footer-text">
+                Copyright @ The Odin Project 2021
+            </div>
+        </div>
     </body> 
 </html>
